fix: restore z-index to bullets menu

--- a/styles.css
+++ b/styles.css
@@ -252,10 +252,10 @@ body{
   transform-origin: left center;
   display: none;
 }
-
 .bullets {
     
     position: fixed;
+    z-index: 1000;
     top: 50%;
     left: 0;
     transform: translate(-100%,-50%);
